--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
@@ -13,7 +14,8 @@
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
     "save": "^2.4.0",
-    "web-vitals": "^1.1.0"
+    "styled-components": "^5.2.1",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
