--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
     "save": "^2.4.0",
+    "validation": "0.0.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
